objects/SF_Credit_Memo_Old__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Schedule__r.Deal_Parent__r.ContactAccount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Schedule__r.DealBrand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Date__c</fullName>
        <label>Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intacct_SI_Number__c</fullName>
        <formula>Schedule__r.Intacct_SI_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intacct SI Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Date__c</fullName>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Schedule__r.DealProgram__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Week__c</fullName>
        <formula>Schedule__r.Week__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>Schedules__c</referenceTo>
        <relationshipName>Credit_Memos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved by Finance</fullName>
                </value>
                <value>
                    <fullName>Approved by Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency Discount</fullName>
                </value>
                <value>
                    <fullName>Agency Discount - Approved by Network</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Credit - Approved by Network</fullName>
                </value>
                <value>
                    <fullName>Network Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SF Credit Memo Old</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>Complete__c</columns>
        <columns>NAME</columns>
        <columns>Schedule__c</columns>
        <columns>Intacct_SI_Number__c</columns>
        <columns>Credit_Amount__c</columns>
        <columns>Program__c</columns>
        <columns>Account__c</columns>
        <columns>Brand__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Comments__c</columns>
        <columns>Schedule_Week__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>Tennis</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CM_Review_Jake</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Program__c</columns>
        <columns>Brand__c</columns>
        <columns>Credit_Amount__c</columns>
        <columns>Comments__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Status__c</columns>
        <columns>Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved by Finance</value>
        </filters>
        <label>CM Review - Jake</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>SF Credit Memo Old Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Credit Memos Old</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>